feat: harden system data application scenarios [skip ci]
